package MonaOctocat;

public class Justicetocat extends Octocat {
    Justicetocat(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion, Url);
    }
    @Override
    void display() {
        super.display();
    }
}
