package MonaOctocat;

public class Manufactutocat extends Octocat{
    Manufactutocat(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion, Url);
    }
    @Override
    void display() {
        super.display();
    }
}
