package MonaOctocat;

public class Skatetocat extends Octocat{
    Skatetocat(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion, Url);
    }
    @Override
    void display() {
        super.display();
    }
}
