@startuml

title __PRACTICAMONA's Objects Diagram__\n

  namespace MonaOctocat {
    class MonaOctocat.Dinotocat {
        +Id: 128
        +Nombre: Dinotocat
        +Descripcion: Mona enjoys dressing up as a dinosaur
        +Url Imagen: https://octodex.github.com/dinotocat/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Filmtocats {
        +Id: 142
        +Nombre: Filmtocats
        +Descripcion: Mona loves to shoot drama films
        +Url Imagen: https://octodex.github.com/filmtocats/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Justicetocat {
        +Id: 132
        +Nombre: Justicetocat
        +Descripcion: Mona defends and supports justice
        +Url Imagen: https://octodex.github.com/justicetocat/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Manufactutocat {
        +Id: 150
        +Nombre: Manufacturetocat
        +Descripcion: Mona enjoys creating technological products
        +Url Imagen: https://octodex.github.com/manufacturetocat/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Octocat {
        +Id: 1
        +Nombre: Mona
        +Descripcion: Mona is very versatile
        +Url Imagen: https://octodex.github.com/original/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Sentrytocat {
        +Id: 141
        +Nombre: Sentrytocat
        +Descripcion: Mona supports firefighting in her spare time
        +Url Imagen: https://octodex.github.com/sentrytocat/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Skatetocat {
        +Id: 124
        +Nombre: Skatetocat
        +Descripcion: Mona loves skating
        +Url Imagen: https://octodex.github.com/skatetocat/
    }
  }

  namespace MonaOctocat {
    class MonaOctocat.Surftocat {
        +Id: 138
        +Nombre: Surftocat
        +Descripcion: Mona is a great surfer
        +Url Imagen: https://octodex.github.com/surftocat/
    }
  }

  MonaOctocat.Octocat  -down-|> MonaOctocat.Dinotocat
 MonaOctocat.Octocat  -down-|> MonaOctocat.Filmtocats
  MonaOctocat.Octocat -down-|> MonaOctocat.Justicetocat
  MonaOctocat.Octocat -down-|> MonaOctocat.Manufactutocat
  MonaOctocat.Octocat -down-|> MonaOctocat.Sentrytocat
  MonaOctocat.Octocat -down-|> MonaOctocat.Skatetocat
  MonaOctocat.Octocat -down-|> MonaOctocat.Surftocat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
